--- a/shelter/style.css
+++ b/shelter/style.css
@@ -3,7 +3,7 @@
     scroll-behavior: smooth;
 }
 
-body {
+body, p, h1, h2, h3 {
     padding: 0;
     margin: 0;
 }
@@ -11,31 +11,45 @@ body {
 
 h1 {
     font-family: Georgia, "Times New Roman", Times, serif;
-        font-weight: 400;
-        font-size: 44px;
-        line-height: 130%;
-        color: rgb(255, 255, 255);
-        margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 44px;
+    line-height: 130%;
+    color: rgb(255, 255, 255);
+    margin-bottom: 10px;
 }
 
 h2 {
-    color: rgb(205, 205, 205);
-        font-family: Arial;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 160%;
-        letter-spacing: 0px;
-        text-align: left;
-        text-decoration: none;
+    color: rgb(84, 84, 84);
+    font-family: Georgia,
+            "Times New Roman",
+            Times,
+            serif;
+    font-size: 35px;
+    font-weight: 400; 
+    line-height: 130%;
+    letter-spacing: 0px;
+    text-align: left;
+    text-decoration: none;
+        
+}
+
+p {
+    color: rgb(76, 76, 76);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0px;
+    text-decoration: none;
 }
 
 h3 {
     font-family: Georgia, "Times New Roman", Times, serif;
-        font-weight: 400;
-        font-size: 32px;
-        line-height: 130%;
-        color: #f1cdb3;
-        margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 130%;
+    color: #f1cdb3;
+    margin-bottom: 10px;
 }
 
 a {
@@ -85,6 +99,7 @@ a {
     font-family: Arial;
     font-size: 15px;
     line-height: 160%;
+    color: rgb(205, 205, 205);
 }
 
 .app-header__content__left__knopka {
@@ -97,5 +112,23 @@ a {
     cursor: pointer;
     font-family: Georgia;
     font-size: 17px;
+}
+
+.second-page {
+    background: rgb(255, 255, 255);;
+}
+
+.container1 {
+    display: flex;
+    gap: 120px;
+    justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+
+.container1-right {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
