--- a/shelter/style.css
+++ b/shelter/style.css
@@ -3,7 +3,7 @@
     scroll-behavior: smooth;
 }
 
-body, p, h1, h2, h3 {
+body, p, h1, h2, h3, h4 {
     padding: 0;
     margin: 0;
 }
@@ -49,6 +49,15 @@ h3 {
     font-size: 32px;
     line-height: 130%;
     color: #f1cdb3;
+    margin-bottom: 10px;
+}
+
+h4 {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 130%;
+    color: rgb(84, 84, 84);
     margin-bottom: 10px;
 }
 
@@ -132,3 +141,77 @@ a {
     gap: 25px;
 }
 
+.third-page {
+    background: rgb(246, 246, 246);
+}
+
+.third-page_title {
+    text-align: center;
+}
+
+.third-page_content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 60px;
+    padding-top: 80px;
+    padding-bottom: 100px;
+}
+
+.button2 {
+    width: 261px;
+    height: 52px;
+    left: 470px;
+    top: 645px;
+    padding: 15px 45px 15px 45px;
+    border: none;
+    border-radius: 100px;
+    background: rgb(241, 205, 179);
+    cursor: pointer;
+    font-family: Georgia;
+    font-size: 17px;
+}
+
+.cards-container {
+    display: flex;
+    gap: 53px;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-btn {
+    border: none;
+    cursor: pointer;
+    width: 52px;
+    height: 52px;
+    background: rgb(246, 246, 246);
+}
+
+.cards {
+    display: flex;
+    gap: 90px;
+}
+
+.card {
+    width: 270px;
+    height: 435px;
+    background: rgb(250, 250, 250);
+    border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.card-btn {
+    width: 187px;
+    height: 52px;
+    padding: 15px 45px 15px 45px;
+    box-sizing: border-box;
+    border: 2px solid rgb(241, 205, 179);
+    border-radius: 100px;
+    cursor: pointer;
+    background: rgb(250, 250, 250);
+    font-family: Georgia;
+    font-size: 17px;
+}
