--- a/shelter/style.css
+++ b/shelter/style.css
@@ -3,7 +3,7 @@
     scroll-behavior: smooth;
 }
 
-body, p, h1, h2, h3, h4 {
+body, p, h1, h2, h3, h4, figure {
     padding: 0;
     margin: 0;
 }
@@ -58,7 +58,6 @@ h4 {
     font-size: 20px;
     line-height: 130%;
     color: rgb(84, 84, 84);
-    margin-bottom: 10px;
 }
 
 a {
@@ -83,12 +82,45 @@ a {
     display: flex;
     gap: 573px;
     justify-content: center;
+    align-items: center;
 }
 
 .app-header__components__set-of-links {
     display: flex;
     gap: 35px;
 }
+
+.ind-link {
+    border-bottom: 4px solid rgb(241, 205, 179);
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+}
+
+.app-header__components__set-of-links__link1 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.app-header__components__set-of-links__link1::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: rgb(241, 205, 179);
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.app-header__components__set-of-links__link1:hover::after {
+    opacity: 1;
+}
+
+
 
 .first-page__content {
     display: flex;
@@ -121,9 +153,18 @@ a {
     cursor: pointer;
     font-family: Georgia;
     font-size: 17px;
+    transition: transform 0.3s;
 }
 
-.second-page {
+.app-header__content__left__knopka:hover {
+    background-color: rgb(179,
+        117,
+        73);
+    color: white;
+    transform: scale(1.1);
+}
+
+.about {
     background: rgb(255, 255, 255);;
 }
 
@@ -141,7 +182,7 @@ a {
     gap: 25px;
 }
 
-.third-page {
+.our-friends {
     background: rgb(246, 246, 246);
 }
 
@@ -170,6 +211,16 @@ a {
     cursor: pointer;
     font-family: Georgia;
     font-size: 17px;
+    transition: transform 0.3s;
+    
+}
+
+.button2:hover {
+    background-color: rgb(179,
+            117,
+            73);
+    color: white;
+    transform: scale(1.1);
 }
 
 .cards-container {
@@ -201,7 +252,15 @@ a {
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    transition: transform 0.3s;
 }
+
+.card:hover {
+    color: white;
+    transform: scale(1.1);
+}
+
+
 
 .card-btn {
     width: 187px;
@@ -212,6 +271,161 @@ a {
     border-radius: 100px;
     cursor: pointer;
     background: rgb(250, 250, 250);
-    font-family: Georgia;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 17px;
+    transition: transform 0.3s;
+}
+
+.card-btn:hover {
+    background-color: rgb(179,
+            117,
+            73);
+    color: white;
+    transform: scale(1.1);
+    
+}
+
+.fourth-page_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    margin: 80px 40px 100px 40px;
+    
+}
+
+.fourth-page_title {
+    text-align: center;
+}
+
+.icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    row-gap: 50px;
+    column-gap: 120px;
+    box-sizing: content-box;
+    max-width: 1026px;
+}
+
+.icon-fig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 130%;
+    color: rgb(84, 84, 84);
+}
+
+.in-addition {
+    background: rgb(246, 246, 246);
+}
+
+.fifth-page-content {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 80px 182px 100px 182px;
+}
+
+.right-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.fifth-page-info {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    color: rgb(84, 84, 84);
+    font-weight: 400;
+    line-height: 110%;
+    letter-spacing: 6%;
+    text-align: left;
+}
+ 
+.fifth-page-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    width: 349px;
+    height: 43px;
+    align-items: center;
+    border: none;
+    border-radius: 9px;
+    background: rgb(241, 205, 179);
+    color: rgb(84, 84, 84);
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 115%;
+    letter-spacing: 6%;
+    cursor: pointer;
+}
+
+.fifth-page-button:hover {
+    background-color: rgb(179,
+            117,
+            73);
+    color: white;
+
+}
+
+.more-info {
+    color: rgb(178, 178, 178);
+        font-family: Arial;
+        font-style: italic;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: 0px;
+        text-align: left;
+}
+
+.footer-page {
+    background-image: url(./images/footer-gradient-background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.footer-content {
+    display: flex;
+    gap: 160px;
+    justify-content: center;
+    padding-top: 40px;
+}
+
+.footer-content-left {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.footer-st1 {
+    color: rgb(255, 255, 255);
+}
+
+.footer-content-center {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.footer-st2 {
+    color: rgb(255, 255, 255);
+}
+
+.link-info {
+    color: rgb(241, 205, 179);
+}
+
+.footer-link {
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
