fix: fixed class name

--- a/shelter/style2.css
+++ b/shelter/style2.css
@@ -129,7 +129,7 @@ a {
     opacity: 1;
 }
 
-.main-page {
+.our-friends {
     background-color:rgb(246, 246, 246);
     display: flex;
     justify-content: center;
