--- a/shelter/style.css
+++ b/shelter/style.css
@@ -102,6 +102,10 @@ a {
         position: relative;
 }
 
+.burger-btn {
+    display: none;
+}
+
 .app-header__components__set-of-links__link1 {
     display: flex;
     flex-direction: column;
@@ -563,10 +567,83 @@ a {
         text-align: center;
     }
 
-    .app-header__components__set-of-links {
+    .burger-btn {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 22px;
+        border: none;
+        cursor: pointer;
+        background-color: transparent;
+        z-index: 2;
+        
+     }
+
+    .btn-span {
+        
         position: absolute;
-        left: -9999px;
+        width: 30px;
+        border: 2px solid rgb(241, 205, 179);
+        right: 0;
+        transition: transform .5s;
+
     }
+
+    .btn-span:nth-child(1) {
+        transform: translateY(-11px);
+    }
+
+    .btn-span:nth-child(3) {
+            transform: translateY(10px);
+        }
+
+    a {
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 160%;
+    }    
+
+    .app-header__components__set-of-links {
+        position: fixed;
+        right: -320px;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        padding-top: 248px;
+        background-image: url(./images/background-burger.png);
+        width: 320px;
+        height: 763px;
+        transition: transform .5s ;
+        
+    }
+
+        .ind-link {
+            border-bottom: 3px solid rgb(241, 205, 179);
+            display: flex;
+            width: 243px;
+            flex-direction: column-reverse;
+            position: relative;
+        }
+
+
+    .app-header.open .app-header__components__set-of-links {
+            transform: translateX(-100%);
+    
+        }
+    .app-header.open .btn-span:nth-child(1) {
+        transform: rotate(-90.00deg) translateY(-11px);
+    }
+
+    .app-header.open .btn-span:nth-child(2) {
+            transform: rotate(-90.00deg);
+    }
+
+    .app-header.open .btn-span:nth-child(3) {
+            transform: rotate(-90.00deg) translateY(11px);
+    }
+        
 
     .first-page__content {
         display: flex;
@@ -595,6 +672,33 @@ a {
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
+    }
+
+    .h2-about {
+        color: rgb(84, 84, 84);
+            font-family: Georgia;
+            font-size: 25px;
+            font-weight: 400;
+            line-height: 130%;
+            letter-spacing: 6%;
+            text-align: center;
+    }
+
+    .p-about {
+        color: rgb(76, 76, 76);
+            font-family: Arial;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 160%;
+            letter-spacing: 0px;
+            text-align: justify;
+            padding-right: 15px;
+            padding-left: 15px;
+    }
+
+    .about-img {
+        width: 260px;
+        height: 353px;
     }
 
     .third-page_content {
@@ -676,7 +780,7 @@ a {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
-        margin: 42px, 10px, 42px;
+        padding: 42px 10px 42px;
     }
 
     .donation-dog-img {
@@ -704,5 +808,10 @@ a {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .foot-img {
+        width: 260px;
+        height: 269px;
     }
 }
