--- a/shelter/style.css
+++ b/shelter/style.css
@@ -250,11 +250,26 @@ a {
     width: 52px;
     height: 52px;
     background: rgb(246, 246, 246);
+    z-index: 1;
 }
 
-.cards {
+.cards-slider {
+    width: 1030px;
+    height: 500px;
+    margin-right: 50px;
+    margin-left: 50px;
+    overflow: hidden;
+}
+
+.slider-line {
+    height: 435px;
+    width: 2160px;
+    margin: 20px;
     display: flex;
     gap: 90px;
+    position: relative;
+    left: 0;
+    transition: all ease 1s;
 }
 
 .card {
@@ -269,22 +284,12 @@ a {
     transition: transform 0.3s;
 }
 
-.katrine-card, .jennifer-card , .woody-card {
-    width: 270px;
-    height: 435px;
-    background: rgb(250, 250, 250);
-    border-radius: 9px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    transition: transform 0.3s;}
 
 
 
 .katrine-card:hover,
 .jennifer-card:hover,
-.woody-card:hover {
+.woody-card:hover, .sophia-card:hover, .timmy-card:hover, .charly-card:hover, .pred-last-card:hover, .last-card:hover {
     color: white;
     transform: scale(1.1);
 }
@@ -505,23 +510,44 @@ a {
         align-items: center;
         flex-direction: column;
         gap: 60px;
-        padding-top: 80px;
-        padding-bottom: 100px;
         padding: 80px 30px 100px;
+    }
+
+    .container-btn, .dekstop-btn {
+        width: 40px;
+        height: 40px;
+        margin: 0;
+        padding: 0;
     }
 
     .cards-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap:0;
+        
     }
 
-    .container-btn {
-        border: none;
-        cursor: pointer;
-        width: 52px;
-        height: 52px;
-        background: rgb(246, 246, 246);
+    .cards-slider {
+            width: 590px;
+            height: 500px;
+            overflow: hidden;
+        }
+    
+    .slider-line {
+            height: 500px;
+            margin: 0;
+            width: 2160px;
+            display: flex;
+            gap: 50px;
+            position: relative;
+            left: 0;
+            transition: all ease 1s;
+        }
+
+    .img-slider-next, .img-slider-back {
+        width: 40px;
+        height: 40px;
     }
 
     .cards {
@@ -529,10 +555,7 @@ a {
         gap: 40px;
     }
 
-    .woody-card {
-        position: absolute;
-        left: -9999px;
-    }
+    
 
     .fifth-page-content {
         display: flex;
@@ -718,13 +741,26 @@ a {
         align-items: center;
     }
 
-    .container-btn {
-        border: none;
-        cursor: pointer;
-        width: 52px;
-        height: 52px;
-        background: rgb(246, 246, 246);
-    }
+    
+
+        .cards-slider {
+            width: 270px;
+            height: 500px;
+            margin-right: 30px;
+            margin-left: 30px;
+            overflow: hidden;
+        }
+    
+        .slider-line {
+            height: 435px;
+            width: 2160px;
+            margin: 20px;
+            display: flex;
+            gap: 50px;
+            position: relative;
+            left: 0;
+            transition: all ease 1s;
+        }
 
     .cards {
         display: flex;
